browserswarm-plugin/static/style.css
/* ... */
.job-page-intro {
  padding-bottom:77px;
}

/* all the important hacks are to override bootstrap */
.job-title {
  max-width: 1284px;
  width:inherit !important;
  float:none !important;
  margin-left: 0 !important;
  margin: 0 auto !important;
  position: relative;
  padding: 0 26px;
  margin-bottom: 20px !important;
}

.job-title h3 {
  text-align: left;
  max-width: 100%;
  margin: 0 auto 15px auto;
  text-shadow: 0px 1px 1px rgba(0, 0, 0, 0.6);
  font-size: 3.25em;
  letter-spacing: -2px;
  line-height: 1;
  color: #fff;
}

.job-pre-title{
  font-size: 0.875em;
  color: #9fccec;
  margin: -25px auto 4px auto;
  padding: 0;
  text-align: left;
  max-width: 100%;
  text-shadow: 0px 1px 1px rgba(0, 0, 0, 0.6);
}
.job-post-title{
  font-size:16px;
  text-align:left;

}

pre.console-output{
  background-color:#333;
  margin-left:0!important;
}


.job-detail-sidebar {
  float: right;
  width: 22% !important;
  width: calc(24% - 8px) !important;
  height: 635px;
  overflow-x: scroll;
  list-style: none;
  margin: 8px 0 0 0;
  padding: 0;
  border: 1px solid #dbdbdb;
}

#list-of-builds{
	position: relative !important;
  border:none;
  margin:0;
}
#list-of-builds .icon-ok {display:none;}
#list-of-builds .build-item-committer {display:none;}

.job-console-container {
  margin-left:0 !important;
}

.build-details-header, .job-console-header {
  margin:0;
  margin-right:-20px;
  margin-bottom:0;
	margin-top: 8px;
  padding:10px;
  background-color:#fff;
}

.build-details-header {
	margin-top: 0px;
}

.job-pre-console {
  margin-left:0 !important;
}
.job-page-pre-console {
  height: 45px;
  color: #2e2e2e;
  margin:1px;
  background: url(/ext/browserswarm-plugin/console-header-bg.png) repeat;
  position: relative;
  font-size: 0.875em;
  font-weight: bold;
  z-index: 100;
  padding: 14px 20px;
}

.job-left-col {
  float: left;
  width: 76% !important;
  position: relative;
  margin-top: 8px;
  margin-left:0 !important;
}

.build-list-header .header-emphasis {display:none;}
.build-list-header {
  margin:0;
  margin-right:-20px;
  margin-bottom:0;
  padding:10px;
  background-color:#fff;
}
.build-list-item {
  width: inherit;
  border: none;
  border-top:1px solid #dbdbdb;
  padding: 10px;
  margin: 0;
}

.build-list-item .span11 a:before{
  content: "Job ID";
  font-size:12px;
  display:inline;
}
.build-list-item .span11{
  font-size:0;
}
.build-list-item .span6{
  width:inherit !important;
}
.build-list-item .span11 a{
  font-size:12px;
  font-weight:bold;
}

.build-list-item .icon-remove{
  display:none;
}

.build-item-duration:before{content:"Duration:";}
.build-item-duration{
  float:none;
  display:block;
  font-size:12px;
  font-weight:normal;
}

.job-page {margin-bottom:40px !important;}

.job-page-intro h3 .job-repo{display:none;}

.framework-matrix .footer{
  font-size:1em;
  padding-top:1em;
  padding-bottom:1em;
}

h1, h2, h3, h4, h5, h6{
  text-rendering:inherit;
}

.gravatar {
	display: inline-block;
	margin-top: -2px;
	margin-bottom: 2px;
	margin-right: 3px;
	padding: 1px;
	line-height: 1px;
	vertical-align: middle;
	font-size: 1px;
	background: #fff;
	border: 1px solid #c8c8c8;
}


/* FOOTER */

footer .wrap {
	margin-bottom: -60px;
	padding-bottom: 60px;
}

footer .wrap p {
	margin-bottom: 0;
}


/* REGISTER */

.hero-unit > h1 {
	margin-bottom: 20px;
}

.hero-unit > center {
	text-align: left;
}

.hero-unit > center .form-inline {
	margin-top: 10px;
}


/* LOGIN */

.strider-fillpage form.login-form {
	padding-bottom: 1.2em;
}

form.login-form > div {
	overflow: hidden;
	margin-bottom: 10px;
}

form.login-form label {
	display: inline-block;
	width: 62px;
	text-align: right;
	line-height: 7px;
	margin-right: 10px;
}

form.login-form input[type="text"] {

}

form.login-form input[type="submit"] {
	float: right;
	margin-right: 18px;
	padding: 5px 10px;
}


/* PROJECT */

body.job_view .body-content {
	position: relative;
	top: 0;
	left: 0;
}

body.job_view footer {
	display: block;
}

